Modified Icons in Both Html and CSS

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
     </nav>
 
   <!-- Search Bar and Google Logo -->
+    <img src="Img/Google.png" alt="Google Logo" class="google-logo">
+
     <div class="search-bar">
-      <i class="material-icons" id="search-icon">search</i>
-      <img src="Img/mic.png" alt="mic icon" id="mic-icon">
-      <img src="Img/Google.png" alt="Google Logo" class="google-logo">
+      <img src="Img/search.png" alt="Search Icon" id="search-icon">
+      <img src="Img/mic.png" alt="Mic Icon" id="mic-icon">
       <input type="text" name="Search-bar">
     </div>
 
@@ -39,7 +40,7 @@
       <input type="submit" name="Google-Search" value="Google Search">
       <input type="submit" name="lucky" value="I'm Feeling Lucky">
     </div>
-  
+
    <!-- FOOTER -->
     <footer>
       <ul>
@@ -51,6 +52,6 @@
         <li style="float:right;"><a href="#">Privacy</a></li>
       </ul>
     </footer>
-  
+
   </body>
 </html>
