--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
@@ -12,46 +13,46 @@
   </head>
   <body>
 
-  <!-- NAVIGATION  -->
-    <nav>
-      <div class="sign-in">
-        <p>Sign in</p>
-      </div>
-      <ul>
-        <li style="float:left;"><a href="#">About</a></li>
-        <li style="float:left;"><a href="#">Store</a></li>
-        <li style="float:right;padding-top: 17px;"><i class="material-icons">apps</i></li>
-        <li style="float:right;"><a href="#">Images</a></li>
-        <li style="float:right;"><a href="#">Gmail</a></li>
-      </ul>
-    </nav>
+  <!-- NAVIGATION -->
+      <nav>
+          <div class="nav-links">
+              <a href="#">Gmail</a>
+              <a href="#">Images</a>
+              <a href="#"><i class="material-icons">apps</i></a>
+              <img src="Img/profile-pic.png" alt="Profile Picture">
+          </div>
+      </nav>
 
   <!-- Search Bar and Google Logo -->
-    <img src="Img/Google.png" alt="Google Logo" class="google-logo">
+        <img src="Img/Google.png" alt="Google Logo" class="google-logo">
 
-    <div class="search-bar">
-      <img src="Img/search.png" alt="Search Icon" id="search-icon">
-      <img src="Img/mic.png" alt="Mic Icon" id="mic-icon">
-      <input type="text" name="Search-bar">
-    </div>
+        <div class="search-bar">
+          <i class="material-icons" id="search-icon">search</i>
+          <img src="Img/mic.png" alt="Mic Icon" id="mic-icon">
+          <input type="text" name="Search-bar">
+        </div>
 
-  <!-- Options -->
-    <div class="options">
-      <input type="submit" name="Google-Search" value="Google Search">
-      <input type="submit" name="lucky" value="I'm Feeling Lucky">
-    </div>
+  <!-- SECTION -->
+        <section>
+            <div>
+                <input type="submit" name="Google-Search" value="Google Search">
+                <input type="submit" name="lucky" value="I'm Feeling Lucky">
+            </div>
+        </section>
 
-   <!-- FOOTER -->
-    <footer>
-      <ul>
-        <li style="float:left;"><a href="#">Advertising</a></li>
-        <li style="float:left;"><a href="#">Business</a></li>
-        <li style="float:left;"><a href="#">How Search works</a></li>
-        <li style="float:right;"><a href="#">Settings</a></li>
-        <li style="float:right;"><a href="#">Terms</a></li>
-        <li style="float:right;"><a href="#">Privacy</a></li>
-      </ul>
-    </footer>
+  <!--FOOTER -->
+      <footer>
+          <div class="footer-links-left">
+            <a href="#">Advertising</a>
+            <a href="#">Business</a>
+            <a href="#">How Search works</a>
+          </div>
+          <div class="footer-links-right">
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#">Settings</a>
+          </div>
+      </footer>
 
   </body>
 </html>
