Made Website Responsive for Mobile

--- a/index.html
+++ b/index.html
@@ -24,23 +24,21 @@
       </nav>
 
   <!-- Search Bar and Google Logo -->
-        <img src="Img/Google.png" alt="Google Logo" class="google-logo">
+      <img src="Img/google.png" alt="Google Logo" class="google-logo">
 
-        <div class="search-bar">
+      <div class="search-bar">
           <i class="material-icons" id="search-icon">search</i>
-          <img src="Img/mic.png" alt="Mic Icon" id="mic-icon">
-          <input type="text" name="Search-bar">
-        </div>
+          <img src="Img/mic.png" alt="Mic icon" id="mic-icon">
+          <input type="text" name="Search Bar">
+      </div>
 
   <!-- SECTION -->
-        <section>
-            <div>
-                <input type="submit" name="Google-Search" value="Google Search">
-                <input type="submit" name="lucky" value="I'm Feeling Lucky">
-            </div>
-        </section>
+          <div class="options">
+              <input type="submit" name="Google-Search" value="Google Search">
+              <input type="submit" name="lucky" value="I'm Feeling Lucky">
+          </div>
 
-  <!--FOOTER -->
+  <!-- FOOTER -->
       <footer>
           <div class="footer-links-left">
             <a href="#">Advertising</a>
