Google Image eror fixed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
 
   <!-- Search Bar and Google Logo -->
-      <img src="Img/google.png" alt="Google Logo" class="google-logo">
+      <img src="Img/Google.png" alt="Google Logo" class="google-logo">
 
       <div class="search-bar">
           <i class="material-icons" id="search-icon">search</i>
